--- a/VRChat/15/1089815.html
+++ b/VRChat/15/1089815.html
@@ -75,10 +75,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "nanka-tsukurouyo" data-product-category="127"
-        data-product-id="1089815" data-product-list="market_show"
-        data-product-price="0" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="nanka-tsukurouyo"
+        data-product-category="127" data-product-id="1089815"
+        data-product-list="market_show" data-product-price="0"
+        data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -101,17 +102,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -122,13 +123,13 @@
                             <img alt="なんか作ろうよ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5412928/icon_image/22f6f09a-c6a8-4a3d-b764-ba448e83a578_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               なんか作ろうよ
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           眼鏡　468△
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -200,17 +201,15 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1089815"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text="眼鏡　468△ | なんか作ろうよ"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1089815"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text="眼鏡　468△ | なんか作ろうよ" data-count=
+                          "none" class="twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1089815"
@@ -220,7 +219,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -292,8 +291,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             私が作るモデルがかけている眼鏡です。私もかけてます。 468△
                             VRChatでの使用を想定しています。 眼鏡のfbxファイルのみ付属します。
                             テクスチャ付属しませんがUVは開いてあります。
@@ -317,8 +316,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
