--- a/VRChat/71/1088971.html
+++ b/VRChat/71/1088971.html
@@ -77,10 +77,10 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand="reflex"
-        data-product-category="201" data-product-id="1088971"
-        data-product-list="market_show" data-product-price="100"
-        data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="reflex" data-product-category="201"
+        data-product-id="1088971" data-product-list="market_show"
+        data-product-price="100" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -104,17 +104,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -125,13 +125,13 @@
                             <img alt="Reflex Store" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1079144/icon_image/bc144c8a-b4a2-441d-9513-25dc2f789d26_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               Reflex Store
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           Reflex Shader 2.2.0
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -331,18 +331,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1088971"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "Reflex Shader 2.2.0 | Reflex Store"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1088971"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "Reflex Shader 2.2.0 | Reflex Store"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1088971"
@@ -352,7 +351,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -385,8 +384,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             Reflex Shader 2.2 リリースしました！
                             基本的な色味はReflex Shader
                             1.0の面影を残しながら、トゥーン調の影やEmissiveScroll等の機能を追加しリッチな表現を可能にしました。2.2よりカスタムインスペクタを追加！更に使いやすくなったReflex
@@ -395,8 +394,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
